  - Update zh-TW.yml, courtesy of shou692199 with PR #4992.
  - Town and Nation lists are now cached, able to be updated after 10 minutes.
  - Add LuckPerms Contexts, courtesy of Warriorrrr with PR #4966.
    - Adds towny contexts to LuckPerms. At the moment this is very similar to our townyperms.yml, but the difference is that these can be used together with other contexts (per world permissions for example).
    - Includes Resident, Mayor, King, InsideTown, InsideOwnTown, InsideOwnPlot.
  - New Config Option: plugin.interfacing.luckperms_contexts
    - Default: true
    - If enabled, Towny contexts will be available in LuckPerms.
  - Map HUD, courtesy of Warriorrrr with PR #4996.
  - New Command: /towny map hud
    - Activates the map in the player's scoreboard.
0.97.0.4:
  - Fix tree/mushroom structure growth on plot borders not being tested correctly.
  - Update to add compatibility for MC 1.17, courtesy of Warriorrrr and LlmDL with PR #5001.
    - Should account for most of the changes so far. More to come as the API is fleshed out by Spigot.
    - Revert on unclaim feature will probably not like servers using the World Height data pack.
    - Config and world files will update their lists of blocks-ignored-from-regeneration automatically.
0.97.0.5:
  - Fix Bonemeal usage not working.
  - Add candles to the bypass for flint & steel.
  - Protect candles from being placed on cakes.
  - Switch over to using new cancelling for PojectileHitEvents.
0.97.0.6:
  - Add upkeep costs for Towns to toggle and remain neutral.
    - Similar to nation peaceful costs.
    - Closes #5003.
  - Fix nations not paying peaceful upkeep if their nation upkeep was 0.
  - New Config Option: economy.price_town_neutrality
    - Default: 25.0
    - The daily upkeep to remain neutral, paid by the Town bank. If unable to pay, neutral/peaceful status is lost.
  - Language files bumped to 0.108.
  - Improve message shown to towns which are invited to a nation.
    - Closes #4998.