@@ -110,6 +110,10 @@ public interface ItemLists {
 	 */
 	public static List<String> CANDLES = new ArrayList<>(Arrays.asList("CANDLE","WHITE_CANDLE","ORANGE_CANDLE","MAGENTA_CANDLE","LIGHT_BLUE_CANDLE","YELLOW_CANDLE","LIME_CANDLE","PINK_CANDLE","GRAY_CANDLE","LIGHT_GRAY_CANDLE","CYAN_CANDLE","PURPLE_CANDLE","BLUE_CANDLE","BROWN_CANDLE","GREEN_CANDLE","RED_CANDLE","BLACK_CANDLE","CANDLE_CAKE","WHITE_CANDLE_CAKE","ORANGE_CANDLE_CAKE","MAGENTA_CANDLE_CAKE","LIGHT_BLUE_CANDLE_CAKE","YELLOW_CANDLE_CAKE","LIME_CANDLE_CAKE","PINK_CANDLE_CAKE","GRAY_CANDLE_CAKE","LIGHT_GRAY_CANDLE_CAKE","CYAN_CANDLE_CAKE","PURPLE_CANDLE_CAKE","BLUE_CANDLE_CAKE","BROWN_CANDLE_CAKE","GREEN_CANDLE_CAKE","RED_CANDLE_CAKE","BLACK_CANDLE_CAKE"));
 
+	/**
+	 * List of Item Frames
+	 */
+	public static List<String> ITEM_FRAMES = new ArrayList<>(Arrays.asList("ITEM_FRAME","GLOW_ITEM_FRAME"));
 	
 	/**
 	 * Returns a pre-configured list from the GROUPS.
